@@ -4,6 +4,8 @@ import com.github.spotbugs.snom.Effort
 plugins {
     id("java")
     checkstyle
+    id("application")
+    id("org.openjfx.javafxplugin") version "0.1.0"
     id("com.github.spotbugs") version "6.5.4"
 }
 
@@ -21,6 +23,16 @@ dependencies {
     testImplementation("org.junit.platform:junit-platform-launcher")
     // Source: https://mvnrepository.com/artifact/org.easymock/easymock
     testImplementation("org.easymock:easymock:5.4.0")
+}
+
+application {
+    mainModule.set("risk")
+    mainClass.set("ui.Main")
+}
+
+javafx {
+    version = "17.0.2"
+    modules = listOf("javafx.controls")
 }
 
 java {
@@ -56,6 +68,20 @@ tasks.named<Checkstyle>("checkstyleTest") {
     configFile = file("config/checkstyle/sun_checks_test.xml")
 }
 
+tasks.register<Exec>("jlink") {
+    dependsOn("jar")
+    commandLine(
+        "${System.getProperty("java.home")}/bin/jlink",
+        "--module-path", "${System.getProperty("java.home")}/jmods:${configurations.runtimeClasspath.get().asPath}:build/libs/sqe-course-project-1.0.jar",
+        "--add-modules", "risk,javafx.controls,javafx.graphics,javafx.base",
+        "--output", "build/image",
+        "--launcher", "Risk=risk/ui.Main",
+        "--strip-debug",
+        "--compress", "2",
+        "--no-header-files",
+        "--no-man-pages"
+    )
+}
 spotbugs {
     ignoreFailures = false
     showStackTraces = true
